Fix dark mode

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -5811,10 +5811,6 @@ html[dir='rtl'] {
     }
   }
 
-  .listview-search {
-    min-width: 360px;
-  }
-
   .searchfield-wrapper {
     border-radius: 0;
     margin: 0 3px 0 -2px;
