--- a/src/themes/theme-new-dark.scss
+++ b/src/themes/theme-new-dark.scss
@@ -304,6 +304,7 @@ $listview-disabled-color: $input-disabled-color;
 $listview-selected-text-color: $ids-color-palette-white;
 $listview-header-bg-color: $ids-color-palette-slate-60;
 $listview-header-color: $ids-color-palette-white;
+$listview-full-width-border-color: $ids-color-palette-slate-60;
 
 $listview-toolbar-button-text-color: $ids-color-palette-slate-30;
 $listview-toolbar-button-icon-color: $ids-color-palette-slate-30;
